# yardi-sdk

./: .env.template  .gitignore  README.md  env.sh  pyproject.toml
scripts/: generate_endpoints.py
src/yardi_sdk/: __init__.py  client.py  core.py  endpoints.py  generate_endpoints.py  utils.py
src/yardi_sdk/endpoints/: __init__.py  billing_and_payments.py  common_data.py  ils_guest_card.py  lease_renewals.py  revenue_management.py  service_requests.py  vendor_invoicing.py
