[project]
name = "yardi-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yhavin", email = "y.havin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "zeep>=4.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
