[project]
name = "yardi-sdk"
version = "0.1.3"
description = "Yardi SDK for Python"
readme = "README.md"
authors = [
    { name = "yhavin", email = "y.havin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.3.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "zeep>=4.3.1",
]
keywords = ["yardi", "api", "property", "management", "sdk", "real estate"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
Repository = "https://github.com/yhavin/yardi-sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["scripts", "dev.py", "*.xml", "*.txt"]